methods.flowerpot.FlowerPot.scala.code
override def growFlowers() {
  redflo()
  center()
  forward(2)
  cyanflo()
  backward(5)
  right()
  forward(2)
  left()
  forward()
  orangeflo()
  forward(3)
  right()
  forward(2)
  left()
  pinkflo()
  forward(3)
  greenflo()
  backwad(5)
}

def redflo(){
  setBrushColor(Color.RED)
  brushDown()
  forward(2)
  backward()
  left()
  forward()
  backward(2)
  brushUp()
}

def center(){
  setBrushColor(Color.YELLOW)
  forward()
  brushDown
  left()
}

def cyanflo(){
  setBrushColor(Color.CYAN)
  brushDown()
  forward(2)
  backward()
  left()
  forward()
  backward(2)
  brushUp()
}

def orangeflo(){
  setBrushColor(Color.ORANGE)
  brushDown()
  forward(2)
  backward()
  left()
  forward()
  backward(2)
  brushUp()
}

def pinkflo(){
  setBrushColor(Color.PINK)
  brushDown()
  forward(2)
  backward()
  left()
  forward()
  backward(2)
  brushUp()
}

def greenflo(){
  setBrushColor(Color.GREEN)
  brushDown()
  forward(2)
  backward()
  left()
  forward()
  backward(2)
  brushUp()
}